--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,6 +3,7 @@
 = render partial: 'home/slider'
 = render partial: 'home/about_us'
 = render partial: 'home/products'
+= render partial: 'layouts/footer'
 -#.row
 -#  .col-sm-12.products-wrapper
 -#    -@products.each do |product|
