--- a/app/views/products/_product_card.html.haml
+++ b/app/views/products/_product_card.html.haml
@@ -2,9 +2,9 @@
   .product-wrapper{
     margin-bottom: 20px;
     .product-card{
-      padding: 0 20px;
+      //padding: 0 20px;
       height: 350px;
-      border: 1px solid red;
+      //border: 1px solid red;
       overflow: hidden;
       .product-img{
         img{
@@ -55,7 +55,7 @@
     }
   }
 
-.col-sm-6.col-md-4
+.col-xs-12
   .product-wrapper
     .product-card.text-center
       .product-img.img-responsive
