--- a/app/views/products/by_category.js.erb
+++ b/app/views/products/by_category.js.erb
@@ -1,2 +1,3 @@
-$('.products-content').html('<%= escape_javascript(render partial: 'products/by_categories',
-                                                                    locals: {products: @products})%>')
+$('.products-content').slick('unslick');
+$('.products-content').html('<%= escape_javascript(render partial: 'products/by_categories',locals: {products: @products})%>')
+initSlider('.products-content');
