--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,4 +1,7 @@
 :scss
+  .main-container{
+    margin-top: 60px;
+  }
   .custom-table{
     thead{
       tr{
@@ -99,5 +102,5 @@
 
     =render partial: 'layouts/header'
 
-
-    = yield
+    .main-container
+      = yield
